# pydl

./: README.md  requirements.txt  setup.cfg  test.py
pydl/: __init__.py  __main__.py  api.py  download.py  logger.py  m3u8.py  utils.py
src/pydl/: __init__.py  __main__.py  api.py  download.py  m3u8.py
